@@ -1,3 +1,4 @@
+Revision 125 	 2011-06-03 	 Minor change to backup script 
 Revision 124 	 2011-05-17 	 Changes to rmv.ac.in crontab 
 Revision 123 	 2011-05-04 	 Trivial change 
 Revision 122 	 2011-05-04 	 Fixing the bookmarks issue with mercurial 1.8 in github_mirror.py 
